# flicker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  bagel.fl  bagel2.fl  chunk.h  common.h  compiler.h  core.c  core.h  debug.c  lexer.c  main.c  memory.c  memory.h  primitive.c  table.c  todo.md  utils.h  value.h
example/: intro.fl  random.fl  wordle.fl
src/: chunk.h  common.h  compiler.c  compiler.h  core.c  core.fl  core.fl.c  core.h  debug.c  debug.h  lexer.c  lexer.h  main.c  memory.c  memory.h  native.c  native.h  object.c  object.h  primitive.c  primitive.h  shishua.c  shishua.h  table.c  table.h  type.c  type.h  utils.c  utils.h  value.c  value.h  vm.c  vm.h
utils/: call_writer.py  call_writer.txt  module_to_string.py
